sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:11: error: not found: value i
    i=0;
    ^AlgCombSort:12: error: not found: value i
    while(i+ecart < getValueCount()){
          ^AlgCombSort:13: error: not found: value i
      if (isSmaller(i+1,i)){
                    ^AlgCombSort:13: error: not found: value i
      if (isSmaller(i+1,i)){
                        ^AlgCombSort:15: error: not found: value i
        swap(i,i+1)
             ^AlgCombSort:15: error: not found: value i
        swap(i,i+1)
               ^