sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var echanges:Boolean=true;
  var ecart:Int=getValueCount();

  while(echanges==true || ecart>1){
    echanges=false
    if(ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i=0;
    while(i+ecart < getValueCount()){
    	if (isSmaller(i+1,i)){
        echanges=true
      	swap(i,i+1)
    	}
  	}
	}
}